--- a/Tweets_Sentiment_Analysis.ipynb
+++ b/Tweets_Sentiment_Analysis.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importing Libraries"
+    "# Importing Libraries & Dataset"
    ]
   },
   {
@@ -20,14 +20,6 @@
     "import matplotlib.pyplot as plot \n",
     "from jupyterthemes import jtplot \n",
     "jtplot.style(theme='monokai', context='notebook', ticks=True, grid=False) \n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Importing Dataset"
    ]
   },
   {
@@ -167,6 +159,310 @@
    "source": [
     "tweets_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 31962 entries, 0 to 31961\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   id      31962 non-null  int64 \n",
+      " 1   label   31962 non-null  int64 \n",
+      " 2   tweet   31962 non-null  object\n",
+      "dtypes: int64(2), object(1)\n",
+      "memory usage: 749.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "tweets_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>31962.000000</td>\n",
+       "      <td>31962.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>15981.500000</td>\n",
+       "      <td>0.070146</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>9226.778988</td>\n",
+       "      <td>0.255397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>7991.250000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>15981.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>23971.750000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>31962.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 id         label\n",
+       "count  31962.000000  31962.000000\n",
+       "mean   15981.500000      0.070146\n",
+       "std     9226.778988      0.255397\n",
+       "min        1.000000      0.000000\n",
+       "25%     7991.250000      0.000000\n",
+       "50%    15981.500000      0.000000\n",
+       "75%    23971.750000      0.000000\n",
+       "max    31962.000000      1.000000"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweets_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         @user when a father is dysfunctional and is s...\n",
+       "1        @user @user thanks for #lyft credit i can't us...\n",
+       "2                                      bihday your majesty\n",
+       "3        #model   i love u take with u all the time in ...\n",
+       "4                   factsguide: society now    #motivation\n",
+       "                               ...                        \n",
+       "31957    ate @user isz that youuu?ðððððð...\n",
+       "31958      to see nina turner on the airwaves trying to...\n",
+       "31959    listening to sad songs on a monday morning otw...\n",
+       "31960    @user #sikh #temple vandalised in in #calgary,...\n",
+       "31961                     thank you @user for you follow  \n",
+       "Name: tweet, Length: 31962, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweets_df['tweet']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "=> The \"id\" column isn't adding much when it comes to training and testing the model, so we will drop it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creating s data subset\n",
+    "tweets_df_susbet = tweets_df[[\"id\",\"label\",\"tweet\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>tweet</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@user when a father is dysfunctional and is s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>@user @user thanks for #lyft credit i can't us...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>bihday your majesty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>#model   i love u take with u all the time in ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>factsguide: society now    #motivation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31957</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ate @user isz that youuu?ðððððð...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31958</th>\n",
+       "      <td>0</td>\n",
+       "      <td>to see nina turner on the airwaves trying to...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31959</th>\n",
+       "      <td>0</td>\n",
+       "      <td>listening to sad songs on a monday morning otw...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31960</th>\n",
+       "      <td>1</td>\n",
+       "      <td>@user #sikh #temple vandalised in in #calgary,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31961</th>\n",
+       "      <td>0</td>\n",
+       "      <td>thank you @user for you follow</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>31962 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       label                                              tweet\n",
+       "0          0   @user when a father is dysfunctional and is s...\n",
+       "1          0  @user @user thanks for #lyft credit i can't us...\n",
+       "2          0                                bihday your majesty\n",
+       "3          0  #model   i love u take with u all the time in ...\n",
+       "4          0             factsguide: society now    #motivation\n",
+       "...      ...                                                ...\n",
+       "31957      0  ate @user isz that youuu?ðððððð...\n",
+       "31958      0    to see nina turner on the airwaves trying to...\n",
+       "31959      0  listening to sad songs on a monday morning otw...\n",
+       "31960      1  @user #sikh #temple vandalised in in #calgary,...\n",
+       "31961      0                   thank you @user for you follow  \n",
+       "\n",
+       "[31962 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweets_df_susbet = tweets_df_susbet.drop(['id'], axis=1)\n",
+    "tweets_df_susbet"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Exploration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
