--- a/Tweets_Sentiment_Analysis.ipynb
+++ b/Tweets_Sentiment_Analysis.ipynb
@@ -815,6 +815,77 @@
     "#viewing the shortest tweet (legnth = 274)\n",
     "tweets_df_susbet[ tweets_df_susbet['length'] == 274 ]['tweet']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43       my mom shares the same bihday as @user   bihda...\n",
+       "220      g o a l s ð repost from @user #propey #ocea...\n",
+       "640      oscar tabarez talks luis suarezâs angry reac...\n",
+       "723       @user another hands &amp; feet complete!! ber...\n",
+       "742      because great things never came from comfo zon...\n",
+       "                               ...                        \n",
+       "31445    .@user on making choices to keep herself   as ...\n",
+       "31448    i'm a gordo. #passpo #florence #firenze #italy...\n",
+       "31509    just 3 keys that are found on your computer to...\n",
+       "31857    traveling happy #family   holidays #car #sunny...\n",
+       "31883    we spent #familytime by doing simple wefie, we...\n",
+       "Name: tweet, Length: 333, dtype: object"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#viewing the tweet with mean length (legnth = 84)\n",
+    "tweets_df_susbet[ tweets_df_susbet['length'] == 84 ]['tweet']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of rows where tweet length is 84 =  333\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = (tweets_df_susbet['length'] == 84 ).sum()\n",
+    "print(\"The number of rows where tweet length is 84 = \",count)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plotting the Wordcloud"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
